# save-daily-exercise

./: .gitignore  README.md  thesis.txt
English/vocabulary/: admin_home_20120927.xml  admin_home_20121123.xml  ezhalel_home_20120923.xml  ezhalel_job_20120919.xml  ezhalel_job_20121024.xml  ezhalel_job_20121112.xml  ezhalel_job_20121122.xml  ezhalel_job_20130427.xml  youdao_20160807.rar
MCU51/doc/: STC89C51RC-RD+_GUIDE-CHINESE.pdf.txt
MCU51/hardware/: flight_ctrl.ddb
MCU51/project/: ReadMe.txt
android/native/: Android.mk  android_ndk.sh
aufs/: aufs.txt  learn.txt  tutorial.txt
bookmarks/: bookmarks_firefox_20150718.html  bookmarks_ubuntu_firefox_2015_09_10.html  bookmarks_windows_chrom_201515_09_10.html
chromium/: useful_tip.txt
cpp/: member_init.cpp
cpp/unit_test_cmocka_cmake/testing/: CMakeLists.txt  README.txt  main.c  test.h
cpp/unit_test_cmocka_cmake/testing/core/: CMakeLists.txt  my_queue_cache_test.c
docker/: install.txt  learn.txt
environment/: new_concept.txt  sqlite.txt  vimrc.txt
learnbook/: programming_python.txt
letsencrypt/: draft-ietf-acme-acme.html  help.command  learn.txt  letsencrypt_client_help.txt  mysql_mariaDB.txt  pep8-python-code-style.txt  rabbitmq.txt  readme.txt
openssl/: mkcert.c  sign.txt
rabbitmq/: readme.txt  receive.py  send.py
script/: add_include_guard_in_header_file.sh  misc.sh  ping_test.sh  play_music.sh  test.h
v8/: A tour of V8: Crankshaft, the optimizing compiler.html  A tour of V8: Garbage Collection.html  A tour of V8: full compiler.html  A tour of V8: object representation.html  readme.txt
(+439 files in other folders)
