PROJECT(MyTest C)
CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

#cmocka lib directory
LINK_DIRECTORIES(/usr/local/lib)

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
message(STATUS ${CMAKE_CXX_COMPILER_ID})
#code coverage
INCLUDE(CodeCoverage)
APPEND_COVERAGE_COMPILER_FLAGS()
SET(COVERAGE_EXCLUDES '${CMAKE_SOURCE_DIR}/*')

ENABLE_TESTING()

ADD_SUBDIRECTORY(core)

SET(TEST_BASE_DIR ${CMAKE_CURRENT_LIST_DIR}/..)
INCLUDE_DIRECTORIES(
    ${CMAKE_SOURCE_DIR}
    ${TEST_BASE_DIR}
)
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-T${PROJECT_SOURCE_DIR}/unit_test.lds")
#MESSAGE(STATUS ${TEST_SRC_LIST})
ADD_EXECUTABLE(${PROJECT_NAME} ${TEST_SRC_LIST} main.c)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} cmocka)
#ADD_TEST(${PROJECT_NAME} ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME})

#SETUP_TARGET_FOR_COVERAGE_COBERTURA(
SETUP_TARGET_FOR_COVERAGE(
    NAME ll_test
    EXECUTABLE ${PROJECT_NAME}
    DEPENDENCIES ${PROJECT_NAME}
)
